# day12_ha-tang-cloud_va_deployment

./: DEPLOYMENT.md  MISSION_ANSWERS.md
01-localhost-vs-production/production/: pyproject.toml
04-api-gateway/production/: pyproject.toml
05-scaling-reliability/production/: Dockerfile  pyproject.toml  requirements.txt
06-lab-complete/: Dockerfile  main.py  pyproject.toml
