[project]
name = "06-lab-complete"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "psutil==6.0.0",
    "pydantic==2.9.0",
    "pyjwt==2.9.0",
    "python-dotenv==1.0.1",
    "redis==5.1.0",
    "uvicorn[standard]==0.30.0",
]
